# flutter_chess_app

./: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
assets/engine/: chess_engine.so.1.0.0  libchess_engine.so.1.0.0
engine_src/: .gitignore  CMakeLists.txt
engine_src/src/: moveGenerator.c
lib/: main.dart  main_debug.dart
lib/engine/: c_chess_engine_library.dart  c_engine_api.dart  c_engine_ffi.dart  chess_ai.dart  chess_engine.dart  chess_engine_api.dart  chess_engine_ffi.dart  gameEmulator.dart  game_emulator.dart
lib/widgets/: board.dart  debug_board.dart  dialogs.dart  draggable_widget.dart  routes.dart
linux/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
